# ai-cli

./: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_cli/: __init__.py  cli.py  config.py  llm.py  setup.py
docs/plans/: 2026-02-19-ai-cli-design.md  2026-02-19-ai-cli-implementation.md  2026-02-19-feature-batch-design.md  2026-02-19-feature-batch-plan.md
src/ai_cli/: __init__.py  cli.py
tests/: test_cli.py  test_config.py  test_integration.py  test_llm.py  test_setup.py
