[project]
name = "ai-cli"
version = "0.1.0"
description = "AI-powered bash command generator using ollama"
requires-python = ">=3.12"
dependencies = [
    "ollama",
    "click",
]

[project.scripts]
ai = "ai_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
