[project]
name = "ai-cli"
version = "0.2.0"
description = "AI-powered bash command generator using ollama"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ollama",
    "click",
]

[project.scripts]
ai = "ai_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
